--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ CSV parser
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body onload="putfields();">
-<div class="bodysection">
+<body>
 
 <div class="topsection">
 	<h1>
@@ -142,6 +141,5 @@ CSV parser
 	</p>	
 </div>
 
-</div>
 </body>
 </html>
