--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ CSV parser
 		Version History:
 	</h1>
 	<p>
+		v1.3: Some minor improvements </br>
 		v1.2: csvdata class defined in seperate .h and .cpp files </br>	
 		v1.1: Operator () added, some minor improvements </br>
 		v1.0: First Release
@@ -177,7 +178,7 @@ CSV parser
 		About:
 	</h1>
 	<p>
-		csvdata version 1.2 by Hamid Soltani. (gmail: hsoltanim)
+		csvdata version 1.3 by Hamid Soltani. (gmail: hsoltanim)
 	</p>
 	<p>
 		Last modified: Aug. 2016.
