--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>
-CSV parser
+Some simple C++ programs
 </title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -12,7 +12,7 @@ CSV parser
 
 <div class="topsection">
 	<h1>
-		CSV parser in C++
+		Simple C++ programs
 	</h1>
 </div>
 
@@ -21,6 +21,15 @@ CSV parser
 		Introduction:
 	</h1>
 	<p>
+		Some simple C++ programs by Hamid Soltani. (gmail: hsoltanim)
+	</p>
+	<h1>
+		Contents:
+	</h1>
+	<p>
+		<a href="csvparser.html">CSV Parser</a>
+	</p>
+	<p>
 		csvdata is a simple c++ class. It can load, save and modify Microsoft Excel friendly CSV files.
 	</p>
 	<p>
@@ -28,160 +37,28 @@ CSV parser
 	</p>
 	<p>
 		It uses std::map to store data. It supports up to 2^32 columns and rows.
-	</p>
-
-	<h1>
-		Usage:
-	</h1>
-	<p>	
-		Convert a string to a safe CSV string:
-	</p>
-	<code>	
-		value = SafeStr(str);
-	</code>		
-	<p>	
-		Convert a CSV string to a primary form:
-	</p>
-	<code>
-		value = PrimaryStr(str);
-	</code>		
-	<p>
-		Create a csvdata:
-	</p>
-	<code>
-		CSVdata csv;
-	</code>
-	<p>
-		Load a CSV file:
-	</p>
-	<code>
-		csv.LoadFile("filename.csv");
-	</code>	
-	<p>
-		Keep current data and load a CSV file:
-	</p>
-	<code>
-		csv.LoadFile("filename.csv",false);
-	</code>		
-	<p>
-		Save to a CSV file:
-	</p>
-	<code>
-		csv.SaveFile("filename.csv");
-	</code>	
-	<p>
-		Assign a value to cell:
-	</p>
-	<code>
-		csv.SetCell(row, column, value);
-	</code>		
-	<p>
-		Get cell value:
-	</p>
-	<code>
-		value = csv.GetCell(row, column);
-	</code>	
-	<p>
-		Get cell value as a double:
-	</p>
-	<code>
-		check = csv.GetCell(row, column, &amp;x);
-	</code>		
-	<p>
-		Erase a cell:
-	</p>
-	<code>
-		csv.EraseCell(row, column); // same as SetCell(row, column, "");
-	</code>		
-	<p>
-		Check if a cell has value and assign it to a string:
-	</p>
-	<code>
-		check = csv.Find(row, column, &amp;str);
-	</code>		
-	<p>
-		Get lower and upper bounds:
-	</p>
-	<code>
-		check = csv.LBElem(&amp;row, &amp;column, &amp;str);
-	</code>
-	<br>		
-	<code>		
-		check = csv.UBElem(&amp;row, &amp;column, &amp;str);
-	</code>	
-	<p>
-		Search for a value from position row, column:
-	</p>
-	<code>
-		check = csv.Search(value, &amp;row, &amp;column);
-	</code>
-	<p>
-		Search for a value from position 0, 0:
-	</p>
-	<code>
-		check = csv.Search(value, &amp;row, &amp;column, true);
-	</code>	
-	<p>
-		Iteration:
-	</p>
-	<code>
-		check = csv.BeginIter(&amp;it);
-	</code>
-	<br>		
-	<code>		
-		check = csv.NextIter(&amp;it);
-	</code>	
-	<br>		
-	<code>		
-		csv.GetIter(it, &amp;row, &amp;column, &amp;str);
-	</code>	
-	<p>	
-		Clear data:
-	</p>
-	<code>	
-		csv.Clear();
-	</code>		
-	<p>	
-		() Operator (read and write):
-	</p>
-	<code>	
-		csv(row, column)
-	</code>			
-	
-	<h1>
-		Version History:
-	</h1>
-	<p>
-		v1.3: Some minor improvements </br>
-		v1.2: csvdata class defined in seperate .h and .cpp files </br>	
-		v1.1: Operator () added, some minor improvements </br>
-		v1.0: First Release
-	</p>
-	
-	<h1>
-		Download:
-	</h1>
-	<p>
-		Use links below to download latest release of CSVparser.
-	</p>
-	<p>
-		<a href="csvdata.h">csvdata.h</a>
-	</p>
-	<p>
-		<a href="csvdata.cpp">csvdata.cpp</a>
 	</p>	
 	<p>
-		<a href="CSVexample.cpp">CSVexample.cpp</a>
-	</p>
-	
-	<h1>
-		About:
-	</h1>
-	<p>
-		csvdata version 1.3 by Hamid Soltani. (gmail: hsoltanim)
+		<a href="mathparser.html">Math Expression Parser</a>	
 	</p>
 	<p>
-		Last modified: Aug. 2016.
+		mathparser is a simple c++ program to parse math expressions.
+	</p>
+	<p>
+		The program is a modified version of math expression parser presented in the book: "C++ The Complete Reference" by H.Schildt.
+	</p>
+	<p>
+		It supports operators: +-*/^()
+	</p>
+	<p>
+		It supports math functions: SIN, COS, TAN, ASIN, ACOS, ATAN, SINH, COSH, TANH, ASINH, ACOSH, ATANH, LN, LOG, EXP, SQRT, SQR, ROUND, INT.	
+	</p>	
+	<p>
+		It supports variables A to Z.
+	</p>
+	<br>
+	<p>
+		Site last modified: Aug. 2016.
 	</p>	
 </div>
 
