--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@ Some simple C++ programs
 	<p>
 		It supports variables A to Z.
 	</p>
+	<p>
+		<a href="matrix.html">Matrix</a>
+	</p>	
+	<p>
+		Matrix is a simple c++ program including operations and functions for matrices.
+	</p>
+	<p>
+		The program is a modified version of Matrix class by Jos de Jong.
+	</p>
+	<p>
+		It supports operators: + - * / and output operator <<
+	</p>
+	<p>
+		It supports functions: Ones, Zeros, Diag.	
+	</p>		
 	<br>
 	<p>
 		Site last modified: Aug. 2016.
