--- a/index.html
+++ b/index.html
@@ -70,7 +70,16 @@ Some simple C++ programs
 	</p>
 	<p>
 		It supports functions: Ones, Zeros, Diag.	
-	</p>		
+	</p>	
+	<p>
+		<a href="sort.html">Sort</a>
+	</p>	
+	<p>
+		sort is a c++ to compare speed of different sort algorithms.
+	</p>
+	<p>
+		The program also verifies the algorithms accuracy by comparing with std::sort function.
+	</p>	
 	<br>
 	<p>
 		Site last modified: Aug. 2016.
