--- a/index.html
+++ b/index.html
@@ -75,10 +75,16 @@ Some simple C++ programs
 		<a href="sort.html">Sort</a>
 	</p>	
 	<p>
-		sort is a c++ to compare speed of different sort algorithms.
+		sort is a c++ program to compare speed of different sort algorithms.
 	</p>
 	<p>
 		The program also verifies the algorithms accuracy by comparing with std::sort function.
+	</p>	
+	<p>
+	<a href="compare.html">Compare Double Numbers</a>
+	</p>	
+	<p>
+		compare is a c++ program to compare two double numbers when insignificant bits not considered.
 	</p>	
 	<br>
 	<p>
