--- a/compare.html
+++ b/compare.html
@@ -46,6 +46,7 @@ Last modified: Sep. 2016.
 #include "stdafx.h"
 #include < bitset >
 #include < iostream >
+#include < math.h >
 
 using namespace std;
 
