--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Some simple C++ programs
 		<a href="matrix.html">Matrix</a>
 	</h2>	
 	<p>
-		Matrix is a simple c++ program including operations and functions for matrices.
+		matrix is a simple c++ program including operations and functions for matrices.
 	</p>
 	<p>
 		The program is a modified version of Matrix class by Jos de Jong.
@@ -70,7 +70,7 @@ Some simple C++ programs
 	</p>
 	<p>
 		It supports functions: Ones, Zeros, Diag.	
-	</p>	
+	</p>
 	<h2>
 		<a href="sort.html">Sort</a>
 	</h2>	
@@ -85,6 +85,18 @@ Some simple C++ programs
 	</h2>	
 	<p>
 		compare is a c++ program to compare two double numbers when insignificant bits not considered.
+	</p>
+	<h2>
+		<a href="matrix2.html">Matrix 2</a>
+	</h2>
+	<p>	
+		matrix2 is a modified version of matrix program.
+	</p>
+	<p>	
+		It uses std::map to store matrix elements and only stores non-zero elements.
+	</p>
+	<p>	
+		It ignores unimportant bits of double numbers which results an absolute zero values for elements of M*Inv(M) not located on diagonal.
 	</p>	
 	<br>
 	<p>
