--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ Some simple C++ programs
 	<h1>
 		Contents:
 	</h1>
-	<p>
+	<h2>
 		<a href="csvparser.html">CSV Parser</a>
-	</p>
+	</h2>
 	<p>
 		csvdata is a simple c++ class. It can load, save and modify Microsoft Excel friendly CSV files.
 	</p>
@@ -38,9 +38,9 @@ Some simple C++ programs
 	<p>
 		It uses std::map to store data. It supports up to 2^32 columns and rows.
 	</p>	
-	<p>
+	<h2>
 		<a href="mathparser.html">Math Expression Parser</a>	
-	</p>
+	</h2>
 	<p>
 		mathparser is a simple c++ program to parse math expressions.
 	</p>
@@ -56,11 +56,11 @@ Some simple C++ programs
 	<p>
 		It supports variables A to Z.
 	</p>
-	<p>
+	<h2>
 		<a href="matrix.html">Matrix</a>
-	</p>	
+	</h2>	
 	<p>
-		Matrix is a simple c++ program including operations and functions for matrices.
+		matrix is a simple c++ program including operations and functions for matrices.
 	</p>
 	<p>
 		The program is a modified version of Matrix class by Jos de Jong.
@@ -70,15 +70,33 @@ Some simple C++ programs
 	</p>
 	<p>
 		It supports functions: Ones, Zeros, Diag.	
-	</p>	
-	<p>
+	</p>
+	<h2>
 		<a href="sort.html">Sort</a>
-	</p>	
+	</h2>	
 	<p>
 		sort is a c++ program to compare speed of different sort algorithms.
 	</p>
 	<p>
 		The program also verifies the algorithms accuracy by comparing with std::sort function.
+	</p>	
+	<h2>
+		<a href="compare.html">Compare Double Numbers</a>
+	</h2>	
+	<p>
+		compare is a c++ program to compare two double numbers when insignificant bits not considered.
+	</p>
+	<h2>
+		<a href="matrix2.html">Matrix 2</a>
+	</h2>
+	<p>	
+		matrix2 is a modified version of matrix program.
+	</p>
+	<p>	
+		It uses std::map to store matrix elements and only stores non-zero elements.
+	</p>
+	<p>	
+		It ignores unimportant bits of double numbers which results an absolute zero values for elements of M*Inv(M) not located on diagonal.
 	</p>	
 	<br>
 	<p>
