--- a/matrix2.html
+++ b/matrix2.html
@@ -72,24 +72,32 @@ Last modified: Sep. 2016.
 
 using namespace std;
 
-#define unImpBits 30
+#define unImpBits 24
 
 union bits64 {
 	double x;
 	unsigned long long i;
 };
 
-double rounded(double r)
+bool isequal(double a, double b)
 {
-	bits64 v;
-	v.x = r;
-	v.i = (v.i + (1 << (unImpBits - 1))) >> unImpBits << unImpBits;
-	return v.x;
+	bits64 mx;
+	bits64 mn;
+	mx.x = a;
+	mn.x = b;
+	if (mx.i < mn.i)
+	{
+		mx.x = b;
+		mn.x = a;
+	}
+	if ((mx.i << 1) == 0) mx.i = 0;
+	if ((mn.i << 1) == 0) mn.i = 0;
+	return (mx.i - mn.i <= (1 << unImpBits));
 }
 
 double add(double x, double y)
 {
-	if (rounded(x) == rounded(-y))
+	if (isequal(x,-y))
 		return 0.0;
 	else
 		return x + y;
@@ -97,7 +105,7 @@ double add(double x, double y)
 
 double sub(double x, double y)
 {
-	if (rounded(x) == rounded(y))
+	if (isequal(x, y))
 		return 0.0;
 	else
 		return x - y;
