--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Some simple C++ programs
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body onload="putfields();">
+<body>
 <div class="bodysection">
 
 <div class="topsection">
@@ -97,7 +97,13 @@ Some simple C++ programs
 	</p>
 	<p>	
 		It ignores unimportant bits of double numbers which results an absolute zero values for elements of M*Inv(M) not located on diagonal.
-	</p>	
+	</p>
+	<h2>
+		<a href="thoughts.html">Thoughts on C++ programming language</a>
+	</h2>
+	<p>	
+		C++ is a beautiful and powerful language. Here is some thoughts (I think) make it just a little better.
+	</p>
 	<br>
 	<p>
 		Site last modified: Aug. 2016.
