--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@ Some simple C++ programs
 		It ignores unimportant bits of double numbers which results an absolute zero values for elements of M*Inv(M) not located on diagonal.
 	</p>
 	<h2>
+		<a href="solve.html">Solve Matrix</a>
+	</h2>
+	<p>	
+		solve is a modified version of matrix2 program.
+	</p>
+	<p>	
+		It can efficiently solve matrix systems.
+	</p>	
+	<h2>
 		<a href="thoughts.html">Thoughts on C++ programming language</a>
 	</h2>
 	<p>	
