--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@ Some simple C++ programs
 		It can efficiently solve matrix systems.
 	</p>	
 	<h2>
-		<a href="thoughts.html">Thoughts on C++ programming language</a>
+		<a href="thoughts.html">Thoughts on programming language</a>
 	</h2>
 	<p>	
-		C++ is a beautiful and powerful language. Here is some thoughts (I think) make it just a little better.
+		I am thinking of some modifications in programming languages.
 	</p>
 	<br>
 	<p>
