--- a/thoughts.html
+++ b/thoughts.html
@@ -26,7 +26,7 @@ Some simple C++ programs
 		Introduction:
 	</h1>
 	<p>
-		C++ is a beautiful and powerful language. Here is some thoughts (I think) make it just a little better.
+		I am thinking of some modifications in programming languages.
 	</p>	
 	<h2>
 		Constant Memory Queue operator
