--- a/thoughts.html
+++ b/thoughts.html
@@ -14,7 +14,7 @@ Some simple C++ programs
 
 <div class="topsection">
 	<h1>
-		Thoughts on C++ programming language
+		Thoughts on programming language
 	</h1>
 </div>
 
