--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@ Some simple C++ programs
 	</p>
 	<p>	
 		It can efficiently solve matrix systems.
+	</p>
+	<h2>
+		Solve2
+	</h2>
+	<p>	
+		solve2 is a modified version of solve program.
+	</p>
+	<p>		
+		It uses array pointers to store only bands parallel to diagonal with non-zero elements.
+	</p>
+	<p>		
+		Coming soon...
 	</p>	
 	<h2>
 		<a href="thoughts.html">Thoughts on programming language</a>
@@ -115,7 +127,7 @@ Some simple C++ programs
 	</p>
 	<br>
 	<p>
-		Site last modified: Aug. 2016.
+		Site last modified: Sep. 2016.
 	</p>	
 </div>
 
