--- a/solve.html
+++ b/solve.html
@@ -67,15 +67,6 @@ Last modified: Sep. 2016.
 
 using namespace std;
 
-// Declarations
-class Matrix;
-static double lastDet; // Determinant computed by Inv function
-Matrix Diag(const int n);
-Matrix Diag(const Matrix& v);
-Matrix Inv(const Matrix& a);
-Matrix Ones(const int rows, const int cols);
-Matrix Zeros(const int rows, const int cols);
-
 using Dimension = unsigned long int;
 using Index = unsigned long long int;
 union Access {
@@ -108,6 +99,15 @@ Dimension getMatrixRow(Index i)
 	return m.at.r;
 }
 
+// Declarations
+class Matrix;
+static double lastDet; // Determinant computed by Inv function
+Matrix Diag(const Dimension n);
+Matrix Diag(const Matrix& v);
+Matrix Inv(const Matrix& a);
+Matrix Ones(const Dimension rows, const Dimension cols);
+Matrix Zeros(const Dimension rows, const Dimension cols);
+
 /*
 * a simple exception class
 * you can create an exeption by entering: throw Exception("...Error description...");
@@ -137,7 +137,7 @@ public:
 	}
 
 	// constructor
-	Matrix(const int row_count, const int column_count)
+	Matrix(const Dimension row_count, const Dimension column_count)
 	{
 		// create a Matrix object with given number of rows and columns
 		rows = row_count;
@@ -165,8 +165,6 @@ public:
 			throw Exception("Subscript out of range");
 	}
 
-	// index operator. You can use this class like myMatrix(col, row)
-	// the indexes are one-based, not zero based.
 	// use this function get if you want to read from a const Matrix
 	double get(const Dimension r, const Dimension c) const
 	{
@@ -179,6 +177,7 @@ public:
 			throw Exception("Subscript out of range");
 	}
 
+	// set matrix element
 	void set(const Dimension r, const Dimension c, const double v)
 	{
 		if (r > 0 && r <= rows && c > 0 && c <= cols)
@@ -671,7 +670,6 @@ Matrix Solve(const Matrix& a, const Matrix& v)
 		}
 	}
 	for (Dimension r = n;r >= 1;r--)
-	{
 		for (Dimension eq = 1; eq <= eqn; eq++)
 		{
 			double temp = 0.0;
@@ -682,7 +680,6 @@ Matrix Solve(const Matrix& a, const Matrix& v)
 				temp += t*vi(c, eq);
 			vi.set(r, eq, (vi(r, eq) - temp) / ai(r, r));
 		}
-	}
 	// cout << "\nSize ai:" << ai.Size() << "\n";
 	// cout << ai << "\n";
 	return vi;
@@ -749,8 +746,7 @@ int main(int argc, char *argv[])
 			cout << X1(i,1) << " , " << X2(i, 1) << "\n";
 		cout << "\nInv(M)*N computation time:    " << (double)(t2 - t1) / CLOCKS_PER_SEC;
 		cout << "\nSolve(M, N) computation time: " << (double)(t3 - t2) / CLOCKS_PER_SEC;
-		cout << "\n";
-		
+		cout << "\n";	
 	}
 	catch (Exception err)
 	{
